// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Indexed source array #@@iterator() 1`] = `1`;

exports[`Indexed source array #@@iterator() 2`] = `2`;

exports[`Indexed source array #@@iterator() 3`] = `3`;

exports[`Indexed source array #constructor() 1`] = `
Indexed {
  "index": 0,
  "source": Array [
    1,
    2,
    3,
  ],
}
`;

exports[`Indexed source array #drop() 1`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`Indexed source array #drop() 2`] = `
Indexed {
  "index": 0,
  "source": Array [],
}
`;

exports[`Indexed source string #@@iterator() 1`] = `"t"`;

exports[`Indexed source string #@@iterator() 2`] = `"e"`;

exports[`Indexed source string #@@iterator() 3`] = `"s"`;

exports[`Indexed source string #@@iterator() 4`] = `"t"`;

exports[`Indexed source string #constructor() 1`] = `
Indexed {
  "index": 0,
  "source": "test",
}
`;

exports[`Indexed source string #drop() 1`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`Indexed source string #drop() 2`] = `
Indexed {
  "index": 0,
  "source": Array [],
}
`;
